fix: addreses #412 - update image spacing in sections and heros

--- a/assets/styles/composition/_about.scss
+++ b/assets/styles/composition/_about.scss
@@ -51,12 +51,12 @@
 
     .about-layout .hero-standard figure {
         display: block;
-        right: 75px;
+        right: 50px;
         top: -300px;
     }
 
     .about-layout .hero-standard img {
-        min-width: 700px;
+        min-width: 750px;
         position: absolute;
     }
 
