--- a/assets/styles/composition/_faqs.scss
+++ b/assets/styles/composition/_faqs.scss
@@ -19,8 +19,8 @@
 
     .faqs-layout .hero-standard figure {
         display: block;
-        right: 98px;
-        top: -160px;
+        right: 75px;
+        top: -150px;
     }
 
     .faqs-layout .hero-standard img {
