--- a/assets/styles/composition/_hyperlocal.scss
+++ b/assets/styles/composition/_hyperlocal.scss
@@ -5,12 +5,12 @@
 @media screen and (min-width: 1366px) {
     .hyperlocal figure {
         display: block;
-        left: -100px;
-        top: -270px;
+        left: -150px;
+        top: -325px;
     }
 
     .hyperlocal img {
-        min-width: 650px;
+        min-width: 750px;
         position: absolute;
     }
 }
