--- a/assets/styles/composition/_makers.scss
+++ b/assets/styles/composition/_makers.scss
@@ -38,12 +38,12 @@
 
     .makers-layout .hero-standard figure {
         display: block;
-        right: 75px;
-        top: -300px;
+        right: 50px;
+        top: -315px;
     }
 
     .makers-layout .hero-standard img {
-        min-width: 700px;
+        min-width: 750px;
         position: absolute;
     }
 
@@ -54,12 +54,12 @@
 
     .makers figure {
         display: block;
-        right: 160px;
+        right: 100px;
         top: -315px;
     }
 
     .makers img {
-        min-width: 800px;
+        min-width: 750px;
         position: absolute;
     }
 }
