--- a/assets/styles/composition/_subscribe.scss
+++ b/assets/styles/composition/_subscribe.scss
@@ -5,12 +5,12 @@
 @media screen and (min-width: 1366px) {
     .subscribe figure {
         display: block;
-        left: -100px;
-        top: -270px;
+        left: -180px;
+        top: -300px;
     }
 
     .subscribe img {
-        min-width: 650px;
+        min-width: 750px;
         position: absolute;
     }
 }
